@@ -1,3 +1,3 @@
 Verify "Depends" listed in README first.
 
-Process with instruction given in "Install:" section of tinyepkg.el.
+Process with instruction given in "Install:" section of epackage.el.
