@@ -2,7 +2,8 @@
 
 	* AUTHORS, COPYING, INSTALL, README: New.
 
-	* tinyepkg.el: Add "Compat" levels and explaint it.
+	* epackage.el:
+	(top-level): Rename package. Add "Compat" levels and explaint it.
 	(ti::macrof-minor-mode-wizard): comment out unused code.
 
 	** MOVE tinyepkg.el out of tiny tools to a separate package **
